fix add many to many add and delete requests, dev container now do not depends on start an existing project

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
       target: development
     volumes:
       - ./:/usr/src/app
-    command: npm run start:dev
+    command: tail -f /dev/null
     ports:
       - 3000:3000
 
